# chain-indexer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROGRESS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
chapters/00-orientation/: README.md
chapters/01-block-and-chain-model/: README.md
chapters/02-the-fork-problem/: README.md
chapters/03-sqlite-schema-and-store/: README.md
chapters/04-indexing-transactions/: README.md
chapters/05-rollbacks-and-reorgs/: README.md
chapters/06-shelley-staking/: README.md
chapters/07-conway-governance/: README.md
chapters/08-a-source-and-ogmios/: README.md
chapters/09-the-sync-loop/: README.md
chapters/10-cbor-and-real-blocks/: README.md
chapters/11-ouroboros-wire-mux-handshake/: README.md
chapters/12-ouroboros-wire-chain-sync/: README.md
chapters/13-the-query-api/: README.md
chapters/14-the-cli/: README.md
chapters/15-the-explorer/: README.md
chapters/16-live-view-and-analytics/: README.md
chapters/17-a-real-cluster-and-reorgs/: README.md
chapters/18-design-and-tradeoffs/: README.md
chapters/19-publish/: README.md
chapters/20-local-state-query/: README.md
chapters/21-epochs-and-dashboard/: README.md
chapters/22-pools/: README.md
chapters/23-governance/: README.md
chapters/24-live-stake/: README.md
chapters/25-bech32-addresses/: README.md
chapters/26-accounts/: README.md
chapters/27-account-links/: README.md
chapters/28-transaction-detail/: README.md
chapters/29-controlled-stake/: README.md
chapters/30-analytics/: README.md
chapters/31-tokens/: README.md
chapters/32-governance-from-cbor/: README.md
chapters/33-clickable-governance/: README.md
chapters/34-certificates/: README.md
chapters/35-transaction-tabs/: README.md
chapters/36-policy-pages/: README.md
chapters/37-protocol-params-and-tx-gov-links/: README.md
chapters/38-committee/: README.md
chapters/39-withdrawals/: README.md
chapters/40-top-holders/: README.md
chapters/41-transactions/: README.md
chapters/42-analytics-charts/: README.md
chapters/43-mempool/: README.md
chapters/44-protocol-updates/: README.md
chapters/45-tx-submission/: README.md
chapters/46-cip25-metadata/: README.md
chapters/47-cip68-metadata/: README.md
chapters/48-pool-detail/: README.md
chapters/49-mint-transactions/: README.md
chapters/50-pool-onchain-details/: README.md
chapters/51-offchain-metadata/: README.md
chapters/52-asset-images/: README.md
chapters/53-ui-theme/: README.md
chapters/54-pool-recent-blocks/: README.md
chapters/55-stake-history/: README.md
chapters/56-governance-tabs/: README.md
chapters/57-header-status/: README.md
chapters/58-config/: README.md
chapters/59-pool-epoch-performance/: README.md
chapters/61-chart-axes/: README.md
docs/: API.md
tests/: test_accounts_integration.py  test_api.py  test_bech32.py  test_cbor_blocks.py  test_chain.py  test_chainsync.py  test_cli.py  test_config.py  test_event.py  test_explorer.py  test_follow.py  test_follow_integration.py  test_governance.py  test_handshake.py  test_handshake_integration.py  test_indexing.py  test_live.py  test_localstate_integration.py  test_model.py  test_mux.py  test_network.py  test_node_integration.py  test_offchain.py  test_ogmios_integration.py  test_ogmios_parse.py  test_patterns.py  test_reorg_integration.py  test_rollback.py  test_sinks.py  test_smoke.py  test_source.py  test_staking.py  test_statequery.py  test_store.py  test_txmonitor.py  test_txsubmit.py  test_webhook.py
(+65 files in other folders)
