[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chainidx"
version = "1.43.0"
description = "A mini Cardano chain indexer with reorg handling, a query API, and a block explorer - a test-driven course"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Artur Wieczorek" }]
keywords = ["cardano", "blockchain", "indexer", "reorg", "ouroboros", "chain-sync", "teaching", "tdd"]
dependencies = []

[project.optional-dependencies]
# Talking to a real chain needs a few libraries. They arrive in later chapters:
#   cbor2      - decode real Cardano blocks (chapter 10)
#   websockets - the Ogmios client and the live dashboard stream (chapters 08, 16)
#   fastapi    - the REST query API (chapter 13)
#   click      - the command-line interface (chapter 14)
# The core engine (chapters 01-07) is pure standard library plus sqlite3.
chain = [
    "cbor2>=5.6",
    "websockets>=12.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "click>=8.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[project.scripts]
# The CLI is built in chapter 14. The entry point is declared here so the
# console command exists once that module lands.
chainidx = "chainidx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# The explorer's static page ships with the package.
chainidx = ["web/*.html"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# A solid, beginner-friendly professional rule set. We keep the teaching code
# clean without drowning a newcomer in stylistic warnings.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "B",    # bugbear (likely bugs)
    "C4",   # comprehensions
    "UP",   # pyupgrade (modern syntax)
    "SIM",  # simplify
    "RET",  # return statements
    "PT",   # pytest style
    "PTH",  # prefer pathlib
    "N",    # pep8 naming
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert and slightly looser naming.
"tests/*" = ["N802", "N803"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
warn_unused_configs = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=chainidx --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "integration: tests that need a live cardano-node, Ogmios, or cardonnay cluster (skipped by default)",
]

[tool.coverage.run]
# Modules that only work against a live node or Ogmios are exercised by the
# integration tests (run manually against a cardonnay cluster), so they are
# left out of the unit-test coverage measurement. The pure parsing logic lives
# in separate modules (e.g. ogmios_parse.py) that ARE covered. This list grows
# as those chapters land (08, 11, 12).
omit = [
    "src/chainidx/ogmios.py",
    "src/chainidx/node.py",
    "src/chainidx/localstate.py",
    "src/chainidx/mempoolclient.py",
    "src/chainidx/txsubmitclient.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# The unit-tested core must stay fully covered. Integration-only modules are
# omitted above because they need a live chain.
fail_under = 100
